--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -26,6 +26,13 @@
             android:layout_height="wrap_content"
             android:textAppearance="?android:textAppearanceMedium" />
 
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:textAppearanceLarge"
+            android:textStyle="bold" />
+
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
